--- a/about.html
+++ b/about.html
@@ -3,20 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Học exterial và terminal</title>
-    <style>
-      h1,
-      p {
-        color: rgb(234, 10, 10);
-        font-style: italic;
-      }
-    </style>
+    <title>Bài 24</title>
   </head>
   <body>
     <a href="./">Home </a>
     <a href="./contact.html">Contact </a>
     <a href="./about.html">About </a>
-    <h1>Tố chất - Năng lực - Kinh nghiệm</h1>
+    <h1>About</h1>
     <p>Lorem ipsum dolor sit amet.</p>
     <p>Lorem ipsum dolor sit amet.</p>
     <p>Lorem ipsum dolor sit amet.</p>
